# simple_mongo_cxx

./: CMakeLists.txt  README.md  main.cpp
